# qtftp

./: CMakeLists.txt
src/: CMakeLists.txt
src/qftp/: qftp.cpp  qftp.h
